rename AssumptionCollectionCPA to AssumptionStorageCPA WARNING: This might mean that you have to update your configuration files!
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@2581 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA-asmpt.properties
+++ b/test/config/symbpredabsCPA-asmpt.properties
@@ -29,7 +29,7 @@ cpa = cpa.art.ARTCPA
 
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA, cpa.assumptions.collector.AssumptionCollectorCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA, cpa.assumptions.storage.AssumptionStorageCPA
 
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
