--- a/test/config/symbpredabsCPA-sbe-asmpt.properties
+++ b/test/config/symbpredabsCPA-sbe-asmpt.properties
@@ -13,7 +13,7 @@ cpa = cpa.art.ARTCPA
 
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA, cpa.assumptions.collector.AssumptionCollectorCPA, cpa.assumptions.genericassumptions.GenericAssumptionsCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.genericassumptions.GenericAssumptionsCPA
 #cpa.explicit.ExplicitCPA
 #cpa.assumptions.progressobserver.ProgressObserverCPA
 
