--- a/test/programs/assumption-tests/config/predabs-lbe_refinementlimit100KB.properties
+++ b/test/programs/assumption-tests/config/predabs-lbe_refinementlimit100KB.properties
@@ -29,7 +29,7 @@ cpa = cpa.art.ARTCPA
 
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA, cpa.assumptions.collector.AssumptionCollectorCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA, cpa.assumptions.storage.AssumptionStorageCPA
 
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
