remove outdated warning from config files
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@2660 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/explicitAnalysis-limits.properties
+++ b/test/config/explicitAnalysis-limits.properties
@@ -5,8 +5,7 @@
 # define limits (e.g. time limits) for specific operations.
 # ----------------------------------------------------------------------
 
-# only paths to error locations are analyzed
-# REMOVE THIS IF YOU DON'T HAVE "Label: ERROR" IN YOUR PROGRAM!
+# only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.progressobserver.ProgressObserverCPA, cpa.monitor.MonitorCPA predabsMonitor
