--- a/test/config/explicitAnalysisInf-cbmc.properties
+++ b/test/config/explicitAnalysisInf-cbmc.properties
@@ -4,8 +4,7 @@
 # Found errors are cross-checked by CBMC.
 # ------------------------------------------------------------------
 
-# only paths to error locations are analyzed
-# REMOVE THIS IF YOU DON'T HAVE "Label: ERROR" IN YOUR PROGRAM!
+# only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
 analysis.useCBMC = true
