--- a/test/config/symbpredabsCPA-asmpt.properties
+++ b/test/config/symbpredabsCPA-asmpt.properties
@@ -8,8 +8,7 @@
 # but may have memory problems on really big programs.
 # ----------------------------------------------------------------------
 
-# only paths to error locations are analyzed
-# REMOVE THIS IF YOU DON'T HAVE "Label: ERROR" IN YOUR PROGRAM!
+# only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
 # topsort is better than dfs if elements may be merged
