--- a/test/config/symbpredabsCPA-sbe.properties
+++ b/test/config/symbpredabsCPA-sbe.properties
@@ -5,8 +5,7 @@
 # It is configured for the Single-Block Encoding (SBE) case.
 # ----------------------------------------------------------------------
 
-# only paths to error locations are analyzed
-# REMOVE THIS IF YOU DON'T HAVE "Label: ERROR" IN YOUR PROGRAM!
+# only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
 analysis.useRefinement = true
