--- a/test/config/explicitAnalysisInf.properties
+++ b/test/config/explicitAnalysisInf.properties
@@ -3,8 +3,7 @@
 # variables in a model-checking configuration.
 # ------------------------------------------------------------------
 
-# only paths to error locations are analyzed
-# REMOVE THIS IF YOU DON'T HAVE "Label: ERROR" IN YOUR PROGRAM!
+# only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.explicit.ExplicitCPA
