--- a/test/config/explicitAnalysisJoin.properties
+++ b/test/config/explicitAnalysisJoin.properties
@@ -3,8 +3,7 @@
 # variables in a data-flow analysis configuration.
 # ------------------------------------------------------------------
 
-# only paths to error locations are analyzed
-# REMOVE THIS IF YOU DON'T HAVE "Label: ERROR" IN YOUR PROGRAM!
+# only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
 # topsort is better than dfs if elements may be merged
