--- a/test/config/mcmillan.properties
+++ b/test/config/mcmillan.properties
@@ -5,8 +5,7 @@
 # THIS IS STILL EXPERIMENTAL AND NOT WORKING.
 # --------------------------------------------------------------------------
 
-# only paths to error locations are analyzed
-# REMOVE THIS IF YOU DON'T HAVE "Label: ERROR" IN YOUR PROGRAM!
+# only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
 analysis.useRefinement = true
