--- a/test/config/symbpredabsCPA-abe.properties
+++ b/test/config/symbpredabsCPA-abe.properties
@@ -6,8 +6,7 @@
 # (this is the default case).
 # ----------------------------------------------------------------------
 
-# only paths to error locations are analyzed
-# REMOVE THIS IF YOU DON'T HAVE "Label: ERROR" IN YOUR PROGRAM!
+# only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
 # topsort is better than dfs if elements may be merged
