--- a/test/config/symbpredabsCPA-lbe.properties
+++ b/test/config/symbpredabsCPA-lbe.properties
@@ -5,8 +5,7 @@
 # It is configured for the Large-Block Encoding (LBE) case.
 # ----------------------------------------------------------------------
 
-# only paths to error locations are analyzed
-# REMOVE THIS IF YOU DON'T HAVE "Label: ERROR" IN YOUR PROGRAM!
+# only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
 # topsort is better than dfs if elements may be merged
