--- a/test/config/symbpredabsCPA-limits.properties
+++ b/test/config/symbpredabsCPA-limits.properties
@@ -8,8 +8,7 @@
 # define limits (e.g. time limits) for specific operations.
 # ----------------------------------------------------------------------
 
-# only paths to error locations are analyzed
-# REMOVE THIS IF YOU DON'T HAVE "Label: ERROR" IN YOUR PROGRAM!
+# only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
 # topsort is better than dfs if elements may be merged
