--- a/test/config/symbpredabsCPA-sbe-asmpt.properties
+++ b/test/config/symbpredabsCPA-sbe-asmpt.properties
@@ -1,5 +1,4 @@
-# only paths to error locations are analyzed
-# REMOVE THIS IF YOU DON'T HAVE "Label: ERROR" IN YOUR PROGRAM!
+# only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
 analysis.useAssumptionCollector = true
