--- a/test/config/symbpredabsCPA-sbe-limits.properties
+++ b/test/config/symbpredabsCPA-sbe-limits.properties
@@ -7,8 +7,7 @@
 # define limits (e.g. time limits) for specific operations.
 # ----------------------------------------------------------------------
 
-# only paths to error locations are analyzed
-# REMOVE THIS IF YOU DON'T HAVE "Label: ERROR" IN YOUR PROGRAM!
+# only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
 analysis.useRefinement = true
