updated interval analysis config file
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@2682 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/intervalAnalysis.properties
+++ b/test/config/intervalAnalysis.properties
@@ -1,4 +1,8 @@
 
+cpa = cpa.art.ARTCPA
+
+ARTCPA.cpa = cpa.composite.CompositeCPA
+
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.interval.IntervalAnalysisCPA
 
 # topsort is better than dfs if elements may be merged
@@ -11,3 +15,7 @@ cpa.interval.threshold = 2000
 
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
+
+#log.level = ALL
+log.consoleLevel = ALL
+
