rename configuration option "analysis.traversal" to "analysis.traversal.order" WARNING: This means that you might need to change the configuration files you use. All configuration files supplied with CPAchecker were updated accordingly.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@2743 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/alwaysTopAnalysis.properties
+++ b/test/config/alwaysTopAnalysis.properties
@@ -1,4 +1,4 @@
-analysis.traversal = bfs
+analysis.traversal.order = bfs
 analysis.traversal.useTopsort = true
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.alwaystop.AlwaysTopCPA
