--- a/test/config/explicitAnalysisJoin.properties
+++ b/test/config/explicitAnalysisJoin.properties
@@ -7,7 +7,7 @@
 cfa.removeIrrelevantForErrorLocations = true
 
 # topsort is better than dfs if elements may be merged
-analysis.traversal = bfs
+analysis.traversal.order = bfs
 analysis.traversal.useTopsort = true
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.explicit.ExplicitCPA
