--- a/test/config/intervalAnalysis.properties
+++ b/test/config/intervalAnalysis.properties
@@ -6,7 +6,7 @@ ARTCPA.cpa = cpa.composite.CompositeCPA
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.interval.IntervalAnalysisCPA
 
 # topsort is better than dfs if elements may be merged
-analysis.traversal = bfs
+analysis.traversal.order = bfs
 analysis.traversal.useTopsort = true
 
 cpa.interval.merge = join
