--- a/test/config/symbpredabsCPA-limits.properties
+++ b/test/config/symbpredabsCPA-limits.properties
@@ -12,7 +12,7 @@
 cfa.removeIrrelevantForErrorLocations = true
 
 # topsort is better than dfs if elements may be merged
-analysis.traversal = bfs
+analysis.traversal.order = bfs
 analysis.traversal.useTopsort = true
 
 analysis.useRefinement = true
