--- a/test/programs/assumption-tests/config/sbe_buggy_30min_NoMonitoring.properties
+++ b/test/programs/assumption-tests/config/sbe_buggy_30min_NoMonitoring.properties
@@ -11,7 +11,7 @@
 # REMOVE THIS IF YOU DON'T HAVE "Label: ERROR" IN YOUR PROGRAM!
 cfa.removeIrrelevantForErrorLocations = true
 
-analysis.traversal = dfs
+analysis.traversal.order = dfs
 
 analysis.useRefinement = true
 
