--- a/test/config/symbpredabsCPA-abe.properties
+++ b/test/config/symbpredabsCPA-abe.properties
@@ -10,7 +10,7 @@
 cfa.removeIrrelevantForErrorLocations = true
 
 # topsort is better than dfs if elements may be merged
-analysis.traversal = bfs
+analysis.traversal.order = bfs
 analysis.traversal.useTopsort = true
 
 analysis.useRefinement = true
