--- a/test/config/symbpredabsCPA-bmc.properties
+++ b/test/config/symbpredabsCPA-bmc.properties
@@ -13,7 +13,7 @@ cfa.removeIrrelevantForErrorLocations = true
 
 # topsort is better than dfs if elements may be merged
 # callstack is necessary for inlining to work well
-analysis.traversal = bfs
+analysis.traversal.order = bfs
 analysis.traversal.useTopsort = true
 analysis.traversal.useCallstack = true
 
