enabled assumption storage in config files
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@2808 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/explicitAnalysis-limits.properties
+++ b/test/config/explicitAnalysis-limits.properties
@@ -8,7 +8,9 @@
 # only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.progressobserver.ProgressObserverCPA, cpa.monitor.MonitorCPA predabsMonitor
+analysis.useAssumptionCollector = true
+
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.progressobserver.ProgressObserverCPA, cpa.monitor.MonitorCPA predabsMonitor
 
 predabsMonitor.cpa = cpa.explicit.ExplicitCPA
 
@@ -22,5 +24,5 @@ TimeOutHeuristics.threshold = 1800000
 
 cpa.monitor.limit = 0
 cpa.monitor.pathcomputationlimit = 0
-cpa.monitor.pathlengthlimit = 0
+cpa.monitor.pathlengthlimit = 100
 cpa.monitor.brancheslimit = 0
