--- a/test/config/symbpredabsCPA-sbe-limits.properties
+++ b/test/config/symbpredabsCPA-sbe-limits.properties
@@ -12,6 +12,8 @@ cfa.removeIrrelevantForErrorLocations = true
 
 analysis.useRefinement = true
 
+analysis.useAssumptionCollector = true
+
 cegar.refiner = cpa.predicate.PredicateRefiner
 
 # ARTCPA is necessary for refinement and has to be the top-level CPA
@@ -19,7 +21,7 @@ cpa = cpa.art.ARTCPA
 
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.progressobserver.ProgressObserverCPA, cpa.monitor.MonitorCPA predabsMonitor
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.progressobserver.ProgressObserverCPA, cpa.monitor.MonitorCPA predabsMonitor
 
 predabsMonitor.cpa = cpa.predicate.PredicateCPA
 
@@ -27,12 +29,12 @@ predabsMonitor.cpa = cpa.predicate.PredicateCPA
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
 ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics = TimeOutHeuristics
-TimeOutHeuristics.threshold = 1800000
+TimeOutHeuristics.threshold = 600000
 
 cpa.monitor.limit = 0
 cpa.monitor.pathcomputationlimit = 0
 cpa.monitor.pathlengthlimit = 0
-cpa.monitor.brancheslimit = 0
+cpa.monitor.brancheslimit = 25
 
 cpa.predicate.abstraction.cartesian = true
 cpa.predicate.blk.threshold = 1
