we needed checkBlockFeasibility enabled for |path formula| heuristic
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3030 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/assumptions/assumption-tests/config/predabs-lbe_noMonitoring.properties
+++ b/test/assumptions/assumption-tests/config/predabs-lbe_noMonitoring.properties
@@ -36,3 +36,4 @@ specification = test/config/automata/ErrorLocationAutomaton.txt
 
 cpa.predicate.blk.functions = false
 cpa.predicate.blk.loops     = true
+cpa.predicate.checkBlockFeasibility = true
