--- a/test/assumptions/assumption-tests/config/predabs-lbe_refinementlimit100KB.properties
+++ b/test/assumptions/assumption-tests/config/predabs-lbe_refinementlimit100KB.properties
@@ -38,3 +38,4 @@ cpa.predicate.blk.functions = false
 cpa.predicate.blk.loops     = true
 
 cpa.predicate.refinement.maxRefinementSize = 100000
+cpa.predicate.checkBlockFeasibility = true
