--- a/test/config/explicitAnalysis.properties
+++ b/test/config/explicitAnalysis.properties
@@ -8,13 +8,13 @@
 cfa.removeIrrelevantForErrorLocations = true
 
 analysis.useCBMC = true
-cbmc.continueAfterInfeasibleError = true
+counterexample.continueAfterInfeasibleError = true
 
 cpa = cpa.art.ARTCPA
 ARTCPA.cpa = cpa.composite.CompositeCPA
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.explicit.ExplicitCPA
 
-cpa.explicit.threshold = 200000
+cpa.explicit.threshold = 2000
 
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
