cleanup configuration files
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3059 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/explicitAnalysis-heuristics.properties
+++ b/test/config/explicitAnalysis-heuristics.properties
@@ -25,8 +25,7 @@ cpa.explicit.threshold = 2000
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
-#ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics = TimeOutHeuristics
-#TimeOutHeuristics.threshold = 1800000
+ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics =
 
 cpa.monitor.limit = 0
 cpa.monitor.pathcomputationlimit = 0
