--- a/test/config/symbpredabsCPA-sbe-assumptions.properties
+++ b/test/config/symbpredabsCPA-sbe-assumptions.properties
@@ -1,3 +1,10 @@
+# ----------------------------------------------------------------------
+# This configuration file uses the Adjustable-Block Encoding CPA
+# for predicate abstraction with CEGAR as described in
+# "Predicate Abstraction with Adjustable-Block Encoding" (Beyer et.al.).
+# It is configured for the Single-Block Encoding (SBE) case.
+# ----------------------------------------------------------------------
+
 # only paths to possible error locations are analyzed
 cfa.removeIrrelevantForErrorLocations = true
 
@@ -13,23 +20,6 @@ cpa = cpa.art.ARTCPA
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.genericassumptions.GenericAssumptionsCPA
-#cpa.explicit.ExplicitCPA
-#cpa.assumptions.progressobserver.ProgressObserverCPA
-
-ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics = TimeOutHeuristics
-#, RepetitionsInPathHeuristics, ReachedSizeHeuristics
-TimeOutHeuristics.threshold = 1000
-#3600000
-RepetitionsInPathHeuristics.threshold = 3
-ReachedSizeHeuristics.threshold = 1000
-
-cpa.explicit.threshold = 20000000
-cpa.explicit.merge = sep
-
-cpa.monitor.limit = 0
-cpa.monitor.pathcomputationlimit = 0
-cpa.monitor.pathlengthlimit = 0
-cpa.monitor.brancheslimit = 0
 
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
