--- a/test/config/symbpredabsCPA-lbe-assumptions.properties
+++ b/test/config/symbpredabsCPA-lbe-assumptions.properties
@@ -2,21 +2,16 @@
 # This configuration file uses the Adjustable-Block Encoding CPA
 # for predicate abstraction with CEGAR as described in
 # "Predicate Abstraction with Adjustable-Block Encoding" (Beyer et.al.).
-# It is configured for abstractions at loop heads, similar to LBE but
-# with function inlining.
-# This configuration works best on most examples,
-# but may have memory problems on really big programs.
+# It is configured for the Large-Block Encoding (LBE) case.
 # ----------------------------------------------------------------------
 
 # topsort is better than dfs if elements may be merged
-# callstack is necessary for inlining to work well
 analysis.traversal.order = bfs
 analysis.traversal.useTopsort = true
-analysis.traversal.useCallstack = true
-
-analysis.useAssumptionCollector = true
 
 analysis.useRefinement = true
+
+analysis.useAssumptionCollector = true
 
 cegar.refiner = cpa.predicate.PredicateRefiner
 
@@ -25,10 +20,10 @@ cpa = cpa.art.ARTCPA
 
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA, cpa.assumptions.storage.AssumptionStorageCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.genericassumptions.GenericAssumptionsCPA
 
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
-cpa.predicate.blk.functions = false
+cpa.predicate.blk.functions = true
 cpa.predicate.blk.loops     = true
