cleanup configuration files
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3060 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/uninitVars-heuristics.properties
+++ b/test/config/uninitVars-heuristics.properties
@@ -4,7 +4,7 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.ty
 
 uninitMonitor.cpa = cpa.uninitvars.UninitializedVariablesCPA
 
-ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics =
+cpa.assumptions.progressobserver.heuristics =
 
 cpa.monitor.limit = 0
 cpa.monitor.pathcomputationlimit = 0
