added/updated interval analysis configurations
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3160 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/intervalAnalysis-cbmc.properties
+++ b/test/config/intervalAnalysis-cbmc.properties
@@ -5,8 +5,8 @@ ARTCPA.cpa = cpa.composite.CompositeCPA
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.interval.IntervalAnalysisCPA
 
-#analysis.useCBMC = true
-#counterexample.continueAfterInfeasibleError = true
+analysis.useCBMC = true
+counterexample.continueAfterInfeasibleError = true
 
 # topsort is better than dfs if elements may be merged
 #analysis.traversal.order = bfs
