documentation and disable useless caching for BMC
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3403 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA-bmc.properties
+++ b/test/config/symbpredabsCPA-bmc.properties
@@ -24,10 +24,17 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.pr
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton-BMC.txt
 
+# No caching, the formulas are never created twice
+cpa.predicate.blk.useCache = false
+
+# No abstractions
 cpa.predicate.blk.functions = false
 cpa.predicate.blk.loops     = false
+
+# No sat checks during formula creation
 cpa.predicate.targetStateSatCheck = false
 
+# Ignore target states during formula creation
 cpa.automaton.breakOnTargetState = false
 
 cpa.loopstack.maxLoopIterations = 1
