--- a/build.properties
+++ b/build.properties
@@ -10,5 +10,6 @@ bin.includes = META-INF/,\
                lib/,\
                .,\
                lib/json_simple-1.1.jar,\
-               lib/guava-r09.jar
+               lib/guava-r09.jar,\
+               lib/eclipse-cdt6-parser.jar
 source.. = src/
