--- a/build.properties
+++ b/build.properties
@@ -1,15 +1,9 @@
 output.. = bin/
 bin.includes = META-INF/,\
-               .classpath,\
-               .project,\
-               build.properties,\
-               lib/javabdd-1.0b2.jar,\
-               lib/mathsat.jar,\
-               lib/icu4j-4_2_1.jar,\
-               bin/,\
-               lib/,\
                .,\
-               lib/json_simple-1.1.jar,\
-               lib/guava-r09.jar,\
-               lib/eclipse-cdt6-parser.jar
+               lib/
 source.. = src/
+bin.excludes = lib/eclipse/,\
+               lib/JFlex.jar,\
+               lib/GPL.txt,\
+               lib/native/
