re-organize some libraries: - new directory lib/build-only for libraries we don't need at runtime (JUnit, parser generator) - move icu4j to lib/eclipse, it is needed only because of the libraries there
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3445 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,6 @@ bin.includes = META-INF/,\
                .,\
                lib/
 source.. = src/
-bin.excludes = lib/eclipse/,\
-               lib/JFlex.jar,\
-               lib/GPL.txt,\
+bin.excludes = lib/build-only/,\
+               lib/eclipse/,\
                lib/native/
