fix ant build scripts
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3491 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/src/org/sosy_lab/cpachecker/fshell/fql2/parser/build.xml
+++ b/src/org/sosy_lab/cpachecker/fshell/fql2/parser/build.xml
@@ -9,7 +9,7 @@
 
   <taskdef name="jflex"
            classname="JFlex.anttask.JFlexTask"
-  	       classpath="${lib}/JFlex.jar"
+	   classpath="${lib}/build-only/JFlex.jar"
   />
   <taskdef name="cup"
            classname="java_cup.anttask.CUPTask"
