resurrect abm test-sets
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/abm@3503 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA-abm.properties
+++ b/test/config/symbpredabsCPA-abm.properties
@@ -5,22 +5,20 @@ cfa.removeIrrelevantForErrorLocations = false
 analysis.traversal.order = bfs
 analysis.traversal.useTopsort = true
 
-#cpa.predicate.abstraction.initialPredicates = preds.txt
-
 analysis.useRefinement = true
 
-cegar.refiner = de.upb.agw.cpachecker.cpa.abm.predicate.ABMPRefiner
-#cegar.refiner = cpa.predicate.PredicateRefiner
+cegar.refiner = cpa.predicate.ABMPredicateRefiner
 
 # ARTCPA is necessary for refinement and has to be the top-level CPA
-cpa = cpa.art.ARTCPA
+cpa = cpa.abm.ABMCPA
+ABMCPA.cpa = cpa.art.ARTCPA
+
 cpa.art.export = false
 cpa.art.errorPath.export = false
 
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = de.upb.agw.cpachecker.cpa.abm.location.ABMLocationCPA, de.upb.agw.cpachecker.cpa.abm.callstack.ABMCallstackCPA, de.upb.agw.cpachecker.cpa.abm.predicate.ABMPredicateCPA
-
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.ABMPredicateCPA
 
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
@@ -29,11 +27,6 @@ specification = test/config/automata/ErrorLocationAutomaton.txt
 cpa.predicate.blk.functions   = false
 cpa.predicate.blk.loops       = true
 
-#cpa.predicate.abstraction.cartesian = true
-#cpa.predicate.blk.threshold = 1
-
-#log.consoleLevel = ALL
-
-cpa.predicate.abm.NO_CACHING = false
-cpa.predicate.abm.delayDeclarations = false
+cpa.abm.NO_CACHING = false
+cpa.abm.delayDeclarations = false
 cpa.predicate.abm.auxiliaryPredicateComputer = false
