update ABM configs
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/abm@3529 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA-abm-auxiliaryPredicates.properties
+++ b/test/config/symbpredabsCPA-abm-auxiliaryPredicates.properties
@@ -23,3 +23,5 @@ specification = test/config/automata/ErrorLocationAutomaton.txt
 
 cpa.predicate.blk.functions   = false
 cpa.predicate.blk.loops       = true
+
+cpa.predicate.abm.auxiliaryPredicateComputer = true
