- Added LoopPartitioning heuristic (only caches loop bodies; faster than abe for e.g. floopy :-)) - Added more flexible way to configure heuristic in ABMCPA
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3571 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA-abm.properties
+++ b/test/config/symbpredabsCPA-abm.properties
@@ -21,5 +21,7 @@ cpa.art.errorPath.export = false
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
+cpa.abm.blockHeuristic = FunctionAndLoopPartitioning
+
 cpa.predicate.blk.functions   = false
 cpa.predicate.blk.loops       = true
