change ant build files so that the scanners and parsers are generated only if the input files changed
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3610 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -31,7 +31,9 @@
     <target depends="clean" name="cleanall"/>
     <target depends="build-subprojects,build-project,build-documentation" name="build"/>
     <target name="build-subprojects">
+	    <echo message="Generate automaton parser if necessary" level="info"/>
 	    <ant antfile="src/org/sosy_lab/cpachecker/cpa/automaton/AutomatonBuild.xml" inheritAll="false"/>
+	    <echo message="Generate FQL parser if necessary" level="info"/>
 	    <ant antfile="src/org/sosy_lab/cpachecker/fshell/fql2/parser/build.xml" inheritAll="false"/>
     </target>
 
