testing by only wrapping CEGARAlgorithm
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3616 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/restartTest.properties
+++ b/test/config/restartTest.properties
@@ -4,4 +4,4 @@
 
 analysis.restartAfterUnknown = true
 
-restartAlgorithm.configFiles = test/config/explicitAnalysis.properties, test/config/symbpredabsCPA-lbe.properties
+restartAlgorithm.configFiles = test/config/symbpredabsCPA-lbe.properties
