make build.xml compatible to Ant 1.6
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3637 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -54,7 +54,7 @@
     <target name="build-documentation" depends="build-project" unless="documentation.uptodate">
         <echo message="running OptionCollector..." level="info"/>
 
-        <echo output="${outputfile}" append="false" message="# This is an auto-generated file, DO NOT EDIT!${line.separator}# Run ant to generate it.${line.separator}"/>
+        <echo file="${outputfile}" append="false" message="# This is an auto-generated file, DO NOT EDIT!${line.separator}# Run ant to generate it.${line.separator}"/>
         <!-- the output of OptionCollector is written into "doc/ConfigurationOptions.txt" -->
         <java classname="org.sosy_lab.common.configuration.OptionCollector"
             fork="true"
