refactored CBMCExecutor to use it for external CBMC analyis
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3654 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/externalCBMC.properties
+++ b/test/config/externalCBMC.properties
@@ -1,5 +1,9 @@
 analysis.externalCBMC = true
 
-cbmc.options.architecture = 32
+cbmc.options.intWidth = 32
 cbmc.options.errorLabel = ERROR
 cbmc.options.unwindings = 1
+
+cbmc.timelimit = 10000
+
+analysis.entryFunction = main
