--- a/test/config/externalCBMC.properties
+++ b/test/config/externalCBMC.properties
@@ -3,7 +3,7 @@ analysis.externalCBMC = true
 cbmc.options.intWidth = 32
 cbmc.options.errorLabel = ERROR
 cbmc.options.unwindings = 10
-#cbmc.options.nuaf = true
+cbmc.options.nuaf = false
 
 #cbmc.timelimit = 10000
 
