--- a/test/config/externalCBMC.properties
+++ b/test/config/externalCBMC.properties
@@ -2,10 +2,10 @@ analysis.externalCBMC = true
 
 cbmc.options.intWidth = 32
 cbmc.options.errorLabel = ERROR
-cbmc.options.unwindings = 1
+cbmc.options.unwindings = 10
 cbmc.options.nuaf = false
 
-#cbmc.timelimit = 10000
+cbmc.timelimit = 3000
 
 analysis.entryFunction = main
 
