added config files for testing
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3679 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/externalCBMC.properties
+++ b/test/config/externalCBMC.properties
@@ -2,12 +2,13 @@ analysis.externalCBMC = true
 
 cbmc.options.intWidth = 32
 cbmc.options.errorLabel = ERROR
-cbmc.options.unwindings = 10
+cbmc.options.unwindings = 1
 cbmc.options.nuaf = false
 
-cbmc.timelimit = 3000
+#cbmc.timelimit = 3000
 
 analysis.entryFunction = main
 
 # reached set type must be set to NORMAL for external CBMC calls
 analysis.reachedSet = NORMAL
+output.disable = true
