fixed the name for the config file
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3680 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA-lbe-15minTimeLimit.properties
+++ b/test/config/symbpredabsCPA-lbe-15minTimeLimit.properties
@@ -14,6 +14,8 @@ analysis.traversal.useTopsort = true
 
 analysis.useRefinement = true
 
+analysis.useAssumptionCollector = true
+
 cegar.refiner = cpa.predicate.PredicateRefiner
 
 # ARTCPA is necessary for refinement and has to be the top-level CPA
@@ -28,7 +30,7 @@ specification = test/config/automata/ErrorLocationAutomaton.txt
 
 ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics = TimeOutHeuristics
 #15 min time limit
-cpa.assumptions.progressobserver.heuristics.timeOutHeuristics.threshold = 90000
+cpa.assumptions.progressobserver.heuristics.timeOutHeuristics.threshold = 9000000
 
 cpa.predicate.blk.functions = true
 cpa.predicate.blk.loops     = true
