set time limit to 15 min
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3682 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA-lbe-15minTimeLimit.properties
+++ b/test/config/symbpredabsCPA-lbe-15minTimeLimit.properties
@@ -30,7 +30,7 @@ specification = test/config/automata/ErrorLocationAutomaton.txt
 
 ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics = TimeOutHeuristics
 #15 min time limit
-cpa.assumptions.progressobserver.heuristics.timeOutHeuristics.threshold = 9000000
+cpa.assumptions.progressobserver.heuristics.timeOutHeuristics.threshold = 900000
 
 cpa.predicate.blk.functions = true
 cpa.predicate.blk.loops     = true
