--- a/test/config/restartAlgorithm.properties
+++ b/test/config/restartAlgorithm.properties
@@ -4,4 +4,6 @@
 
 analysis.restartAfterUnknown = true
 
-restartAlgorithm.configFiles = test/config/externalCBMC.properties, test/config/explicitAnalysis.properties, test/config/symbpredabsCPA-lbe.properties
+restartAlgorithm.configFiles = test/config/externalCBMC.properties, test/config/explicitAnalysis-R5000_limit.properties, test/config/symbpredabsCPA-lbe-15minTimeLimit.properties
+
+output.disable = true
