added cbmc counterexample check option to config file
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3687 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA-lbe-15minTimeLimit.properties
+++ b/test/config/symbpredabsCPA-lbe-15minTimeLimit.properties
@@ -16,6 +16,9 @@ analysis.useRefinement = true
 
 analysis.useAssumptionCollector = true
 
+analysis.useCBMC = true
+counterexample.continueAfterInfeasibleError = true
+
 cegar.refiner = cpa.predicate.PredicateRefiner
 
 # ARTCPA is necessary for refinement and has to be the top-level CPA
