--- a/test/config/bmc-induction.properties
+++ b/test/config/bmc-induction.properties
@@ -1,21 +1,37 @@
 # ----------------------------------------------------------------------
-# This configuration file uses the Adjustable-Block Encoding CPA
-# for predicate abstraction with CEGAR as described in
-# "Predicate Abstraction with Adjustable-Block Encoding" (Beyer et.al.).
-# It is configured for abstractions at loop heads, similar to LBE but
-# with function inlining.
-# This configuration works best on most examples,
-# but may have memory problems on really big programs.
+# This configuration file enables Bounded Model Checking.
 # ----------------------------------------------------------------------
 
-# topsort is better than dfs if elements may be merged
-# callstack is necessary for inlining to work well
+# the loop unrolling bound
+cpa.loopstack.maxLoopIterations = 1
+
+# use integer arithmetic
+# (otherwise induction is normally too imprecise)
+cpa.predicate.mathsat.useIntegers = true
+
+# disable bounding assertions (default is enabled)
+#bmc.boundingAssertions = false
+
+# enable induction for safety verification
+bmc.induction = true
+
+# config file for invariant generation for induction
+bmc.invariantGenerationConfigFile = test/config/invariantAnalysis.properties
+
+# generate invariants in parallel to the BMC analysis (default is false)
+#bmc.parallelInvariantGeneration = true
+
+
+# The rest of the options should not be changed.
+
+# best traversal orer for formula creation
 analysis.traversal.order = bfs
 analysis.traversal.useTopsort = true
 analysis.traversal.useCallstack = true
 
 analysis.useBMC = true
 
+# ARTCPA is needed for induction
 cpa = cpa.art.ARTCPA
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
@@ -36,5 +52,3 @@ cpa.predicate.targetStateSatCheck = false
 
 # Ignore target states during formula creation
 cpa.automaton.breakOnTargetState = false
-
-cpa.loopstack.maxLoopIterations = 1
