new config files used by restart algorithms
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3749 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA-lbe-15minTimeLimit.properties
+++ b/test/config/symbpredabsCPA-lbe-15minTimeLimit.properties
@@ -6,6 +6,7 @@
 # (this is the default case).
 # This CPA is wrapped in another CPA that provides the possibility to
 # define limits (e.g. time limits) for specific operations.
+# This config file limits the analysis to 15 min. with time limiting heuristics.
 # ----------------------------------------------------------------------
 
 # topsort is better than dfs if elements may be merged
