--- a/test/config/explicitAnalysis-R5000_limit.properties
+++ b/test/config/explicitAnalysis-R5000_limit.properties
@@ -1,8 +1,7 @@
 # ----------------------------------------------------------------------
 # This configuration file uses the Explicit Analysis CPA
-# with threshold 2000 (infinite for most cases)
-# This CPA is wrapped in another CPA that provides the possibility to
-# define limits (e.g. time limits) for specific operations.
+# with threshold 200000 (infinite for most cases)
+# It limits the analysis to 15 min and size of the reached set to 5000.
 # ----------------------------------------------------------------------
 
 # only paths to possible error locations are analyzed
