--- a/test/config/restartAlgorithm.properties
+++ b/test/config/restartAlgorithm.properties
@@ -1,5 +1,7 @@
 # ------------------------------------------------------------------
-# Test file for restart analysis
+# This configuration file uses restart analysis with default configuration.
+# The first analysis is cbmc, the second algorithm is explicit analysis limited with
+# 15 min time limit and |R| = 5000 and the third algorithm is lbe with 15 min limit. 
 # ------------------------------------------------------------------
 
 analysis.restartAfterUnknown = true
