--- a/test/config/symbpredabsCPA-abm.properties
+++ b/test/config/symbpredabsCPA-abm.properties
@@ -25,3 +25,5 @@ cpa.abm.blockHeuristic = FunctionAndLoopPartitioning
 
 cpa.predicate.blk.functions   = false
 cpa.predicate.blk.loops       = true
+
+cpa.predicate.abm.auxiliaryPredicateComputer = false
