--- a/test/config/explicitAnalysis-assumptions.properties
+++ b/test/config/explicitAnalysis-assumptions.properties
@@ -23,3 +23,5 @@ cpa.explicit.threshold = 200000
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
+output.disable = true
+assumptions.automatonFile = AssumptionAutomaton.txt
