config files updated for testing restarts with assumption guiding automaton
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3776 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/explicitAnalysis-heuristics.properties
+++ b/test/config/explicitAnalysis-heuristics.properties
@@ -6,28 +6,30 @@
 # ----------------------------------------------------------------------
 
 # only paths to possible error locations are analyzed
-cfa.removeIrrelevantForErrorLocations = true
+cfa.removeIrrelevantForErrorLocations = false
 
 analysis.useCBMC = true
-counterexample.continueAfterInfeasibleError = true
+counterexample.continueAfterInfeasibleError = false
 
 analysis.useAssumptionCollector = true
 
 cpa = cpa.art.ARTCPA
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.progressobserver.ProgressObserverCPA, cpa.monitor.MonitorCPA predabsMonitor
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.assumptions.progressobserver.ProgressObserverCPA
 
-predabsMonitor.cpa = cpa.explicit.ExplicitCPA
-
-cpa.explicit.threshold = 2000
+cpa.explicit.threshold = 200000
 
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
-ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics =
+# Specify heuristics: PathLengthHeuristics, ReachedSizeHeuristics, TimeOutHeuristics
+ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics = ReachedSizeHeuristics
 
-cpa.monitor.limit = 0
-cpa.monitor.pathcomputationlimit = 0
-cpa.monitor.pathlengthlimit = 0
-cpa.monitor.brancheslimit = 0
+cpa.assumptions.progressobserver.heuristics.reachedSizeHeuristics.threshold = 5000
+#cpa.assumptions.progressobserver.heuristics.pathLengthHeuristics.threshold = 200
+#15 min time limit
+#cpa.assumptions.progressobserver.heuristics.timeOutHeuristics.threshold = 900000
+
+output.disable = true
+assumptions.automatonFile = AssumptionAutomaton.txt
