--- a/test/config/symbpredabsCPA-lbe-automaton.properties
+++ b/test/config/symbpredabsCPA-lbe-automaton.properties
@@ -24,3 +24,5 @@ specification = test/config/automata/explicitAndPredAbst.spec
 
 cpa.predicate.blk.functions = true
 cpa.predicate.blk.loops     = true
+
+output.disable = true
