revert back to the original config file used only for heuristics with explicit analysis
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3782 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/explicitAnalysis-heuristics.properties
+++ b/test/config/explicitAnalysis-heuristics.properties
@@ -6,10 +6,10 @@
 # ----------------------------------------------------------------------
 
 # only paths to possible error locations are analyzed
-cfa.removeIrrelevantForErrorLocations = false
+cfa.removeIrrelevantForErrorLocations = true
 
 analysis.useCBMC = true
-counterexample.continueAfterInfeasibleError = false
+counterexample.continueAfterInfeasibleError = true
 
 analysis.useAssumptionCollector = true
 
@@ -23,13 +23,4 @@ cpa.explicit.threshold = 200000
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
-# Specify heuristics: PathLengthHeuristics, ReachedSizeHeuristics, TimeOutHeuristics
-ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics = ReachedSizeHeuristics
-
-cpa.assumptions.progressobserver.heuristics.reachedSizeHeuristics.threshold = 5000
-#cpa.assumptions.progressobserver.heuristics.pathLengthHeuristics.threshold = 200
-#15 min time limit
-#cpa.assumptions.progressobserver.heuristics.timeOutHeuristics.threshold = 900000
-
-output.disable = true
-assumptions.automatonFile = AssumptionAutomaton.txt
+ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics =
