modified/added config files for experiments
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3783 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/explicitAnalysis-R5000_limit.properties
+++ b/test/config/explicitAnalysis-R5000_limit.properties
@@ -22,9 +22,7 @@ cpa.explicit.threshold = 200000
 # this automaton defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
-ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics = ReachedSizeHeuristics, TimeOutHeuristics
+ProgressObserverCPA.cpa.assumptions.progressobserver.heuristics = ReachedSizeHeuristics
 cpa.assumptions.progressobserver.heuristics.reachedSizeHeuristics.threshold = 5000
-#15 min time limit
-cpa.assumptions.progressobserver.heuristics.timeOutHeuristics.threshold = 900000
 
 output.disable = true
