--- a/test/config/symbpredabsCPA-lbe-forRestart.properties
+++ b/test/config/symbpredabsCPA-lbe-forRestart.properties
@@ -24,3 +24,6 @@ cpa.predicate.blk.functions = true
 cpa.predicate.blk.loops     = true
 
 output.disable = true
+
+analysis.useCBMC=true
+counterexample.continueAfterInfeasibleError=true
