check for feasibility with lbe too. we have this for restart tests, so it is added to automaton tests for consistency.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@3820 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA-lbe-automaton.properties
+++ b/test/config/symbpredabsCPA-lbe-automaton.properties
@@ -26,3 +26,6 @@ cpa.predicate.blk.functions = true
 cpa.predicate.blk.loops     = true
 
 output.disable = true
+
+analysis.useCBMC = true
+counterexample.continueAfterInfeasibleError = true
