--- a/test/config/symbpredabsCPA-lbe-forRestart.properties
+++ b/test/config/symbpredabsCPA-lbe-forRestart.properties
@@ -25,5 +25,5 @@ cpa.predicate.blk.loops     = true
 
 output.disable = true
 
-analysis.useCBMC=true
-counterexample.continueAfterInfeasibleError=true
+analysis.useCBMC = true
+counterexample.continueAfterInfeasibleError = true
