Created a prototype rely-guarantee CPA, which extends predicate CPA. Small changes to predicate CPA.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/multi-threaded@3832 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/rg-symbpredabsCPA-lbe.properties
+++ b/test/config/rg-symbpredabsCPA-lbe.properties
@@ -11,16 +11,17 @@ analysis.traversal.useTopsort = true
 
 #analysis.useRelyGuaranteeRefinement = true
 
-#rg-cegar.refiner = cpa.predicate.PredicateRefiner
+#rg-cegar.refiner = cpa.relyguarantee.PredicateRefiner
 
 # ARTCPA is necessary for refinement and has to be the top-level CPA
 cpa = cpa.art.ARTCPA
 
 ARTCPA.cpa = cpa.composite.CompositeCPA
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.PredicateCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.relyguarantee.RelyGuaranteeCPA
 
-# this automaton defines which locations are the error locations
+# this automaton
+ defines which locations are the error locations
 specification = test/config/automata/ErrorLocationAutomaton.txt
 
 cpa.predicate.blk.functions = true
